(#2350) Build Elexis on github